# aitkl-mcp

./: .gitignore  README.md
client/: client.py  gemini_service.py  pyproject.toml
server/: overpass.py  server.py
